Fix star rating after update

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -164,7 +164,7 @@ img[lazy=loading] {
   transform: translateZ(0);
 }
 
-[id^='star-rating'], [id^='star-rating'] .star-rating {
+[id^='star-rating'], [id^='star-rating'] .vue-star-rating {
   display: block;
   margin: 0 auto;
 
