--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -181,6 +181,16 @@ img[lazy=loading] {
   h2, h3, h4 {
     margin-top: 2rem;
   }
+  h2 {
+    font-size: 1.5rem;
+    border-bottom: 1px solid #eaeaea;
+    padding-bottom: 8px;
+    margin-bottom: 16px;
+    margin-top: 32px;
+  }
+  h3 {
+    font-size: 1.25rem;
+  }
   img {
     width: 100%;
     height: auto;
