Tidy up blog formatting

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -184,10 +184,7 @@ img[lazy=loading] {
   }
   h2 {
     font-size: 1.5rem;
-    border-bottom: 1px solid #eaeaea;
-    padding-bottom: 8px;
-    margin-bottom: 16px;
-    margin-top: 32px;
+    margin-top: 2rem;
   }
   h3 {
     font-size: 1.25rem;
