--- a/assets/styles/bootstrap.scss
+++ b/assets/styles/bootstrap.scss
@@ -6,6 +6,7 @@
  @import "~bootstrap/scss/type";
  @import "~bootstrap/scss/images";
  @import "~bootstrap/scss/grid";
+ @import "~bootstrap/scss/tables";
  @import "~bootstrap/scss/forms";
  @import "~bootstrap/scss/buttons";
  @import "~bootstrap/scss/transitions";
